按字典序一个一个重新比对上游代码，太多了，还是每次merge的时候再做